@@ -66,10 +66,11 @@ public class ShopifyController {
             String url = "https://" + vendor.getSitio() + "/admin/api/2023-07/orders.json";
             UriComponentsBuilder builder = UriComponentsBuilder.fromHttpUrl(url);
 
-            if (createdAtMin != null && !createdAtMin.isBlank()) {
+            if (createdAtMin != null && !createdAtMin.trim().isEmpty()) {
                 builder.queryParam("created_at_min", createdAtMin);
             }
-            if (createdAtMax != null && !createdAtMax.isBlank()) {
+            if (createdAtMax != null && !createdAtMax.trim().isEmpty()) {
+
                 builder.queryParam("created_at_max", createdAtMax);
             }
             ResponseEntity<String> resp = rest.exchange(
